# fiskologisk

./: .gitignore  .gitlab-ci.yml  2023-11-12-test-harvest-tankfraction.txt  DecompCyclesSolver.py  DecomposistionSolver.py  Environment.py  GurobiMasterProblemGenerator.py  GurobiProblemGenerator.py  LICENSE  MasterColumn.py  Module.py  Parameters.py  Period.py  PeriodAfterDeploy.py  README.md  SubproblemAgeDP.py  SubproblemDP.py  SubproblemSmallMIP.py  Tank.py  WeightClass.py  Year.py  char_diagram.py  convert_to_fix.py  problem_setup.py  read_problem.py  run_dpheur_iteration.py  run_iteration.py  run_problem.py  test_thesis.py  weight_distribution.py
Data/: Folder Format.txt
Data/Common/: OxygenConsumption.csv
Data/Decomp_M15_T4_Y4_E14_P18/: CoreProblem.json  Iteration0.json  Iteration1.json  Iteration2.json  Iteration3.json  M15_T4_Y4_I0.json  M15_T4_Y4_I1.json  M15_T4_Y4_I2.json  M15_T4_Y4_I3.json
Data/Decomp_M20_T4_Y4_E14_P18/: CoreProblem.json  Iteration0.json  Iteration1.json  Iteration2.json  Iteration3.json  M20_T4_Y4_I0.json  M20_T4_Y4_I2.json
dp_heur/: Cargo.toml
dp_heur/src/: lib.rs
experiments/: nodecomposition-with-lowerbounds-on-deploy-and-transfer.lp  nodecomposition-without-lowerbounds-on-deploy-and-transfer.lp
fiskologisk/: MasterColumn.py  SolutionProvider.py  read_problem.py
gui/: optimize.py  package-lock.json  package.json  server.py
public/: app.js  asset-manifest.json  index.html  problems.json
scripts/: convert_to_fix.py  map_problems_for_frontend.sh
static_param_matrix/: run.py
ui/: README.md  package-lock.json  package.json
(+295 files in other folders)
