[package]
name = "dp_heur"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dp_heur"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
log = "0.4.20"
ordered-float = "4.1.1"
serde_json = "1.0.107"
serde = { version="1.0.189", features = ["derive"] }
